panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__compound-literal__test_compound_literal_array_with_unknown_length.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/compound-literal/test_compound_literal_array_with_unknown_length.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/compound-literal/test_compound_literal_array_with_unknown_length.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (hoisted-compound-literal compound_literal.3~4 `array<int; 11>`)
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 5>>`
                        (string `array<char; 5>` "%zu\n\0"))))
               (lengthof `unsigned long` 11
                  (compound-literal `array<int; 11>`
                     (definition compound_literal.3~4 `array<int; 11>`
                        (braced
                           (subobject +40 (42 `int`))))))))
         (hoisted-compound-literal compound_literal.5~6 `array<char; 12>`)
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 5>>`
                        (string `array<char; 5>` "%zu\n\0"))))
               (sizeof `unsigned long` 12
                  (compound-literal `array<char; 12>`
                     (definition compound_literal.5~6 `array<char; 12>`
                        (braced
                           (subobject +0 (string `array<char; 12>` "hello world\0")))))))))))

----- stderr -----
