panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__compound-literal__test_error_invalid_storage_class_specifier.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/compound-literal/test_error_invalid_storage_class_specifier.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: invalid storage class `extern` applied to compound literal
   ╭─[panko/tests/cases/execute/compound-literal/test_error_invalid_storage_class_specifier.c:3:10]
   │
 3 │ int a = (extern int){42};
   │         ────┬───────────  
   │             │             
   │             ╰───────────── `extern` is invalid for compound literals
───╯

Error: invalid storage class `typedef` applied to compound literal
   ╭─[panko/tests/cases/execute/compound-literal/test_error_invalid_storage_class_specifier.c:4:10]
   │
 4 │ int b = (typedef int){27};
   │         ────┬────────────  
   │             │              
   │             ╰────────────── `typedef` is invalid for compound literals
───╯

Error: invalid storage class `extern` applied to compound literal
    ╭─[panko/tests/cases/execute/compound-literal/test_error_invalid_storage_class_specifier.c:10:6]
    │
 10 │     (extern int){1};
    │     ────┬──────────  
    │         │            
    │         ╰──────────── `extern` is invalid for compound literals
────╯

Error: invalid storage class `typedef` applied to compound literal
    ╭─[panko/tests/cases/execute/compound-literal/test_error_invalid_storage_class_specifier.c:11:6]
    │
 11 │     (typedef int){2};
    │     ────┬───────────  
    │         │             
    │         ╰───────────── `typedef` is invalid for compound literals
────╯
